infra/prometheus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`prometheus.k.joshuachp.dev`)"
      kind: Rule
      services:
        - name: prometheus-server
          port: http
    - match: "Host(`alertmanager.k.joshuachp.dev`)"
      kind: Rule
      services:
        - name: prometheus-alertmanager
          port: http
  tls:
    secretName: cert-k-joshuachp-dev
    domains:
      - main: k.joshuachp.dev
        sans:
          - "*.k.joshuachp.dev"
